...
        <variable
            name="viewModel"
            type="com.example.quizapp.QuestionViewmodel" />
    </data>

    <LinearLayout
        android:id="@+id/fragment_question_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#94D7F6">

        <androidx.constraintlayout.widget.ConstraintLayout
...
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@id/timeText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"></TextView>

            <Button
                android:id="@+id/submit_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:text="Submit"
                android:onClick="submitPressed"
...
