...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94D7F6"
    tools:context=".SetupScreen_Fragment"
    android:id="@+id/Setup_ScreenFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOfRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="11dp"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
...
