...
        <variable
            name="viewmodel"
            type="com.example.quizapp.QuestionViewmodel" />
    </data>

    <LinearLayout
        android:id="@+id/Summary_screen_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SummaryScreen_Fragment"
        android:orientation="vertical"
        android:background="#94D7F6">

...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/restartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Restart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
...
